# inception-tools

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  Pipfile  README.md  README.rst  log.cfg  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish-dev.yml  python-publish-develop.yml  python-publish-devop.yml  python-publish-master.yml  python-publish-release.yml  python-publish.yml  python-test-suite-dev.yml  python-test-suite-develop.yml  python-test-suite-master.yml
docs/: Makefile  conf.py  index.rst  make.bat
inception_tools/: __init__.py  archetype.py  archetype_base.py  archetype_descriptor.py  archetype_metadata.py  archetype_parameters.py  archetype_resource_builder.py  cli.py  constants.py  directory_builder.py  file_builder.py  json_serializable.py  serializable.py  standard_archetype.py  template_archetype.py  template_directory_builder.py  template_file_builder.py
inceptiontools/: __init__.py  archetype.py  archetype_base.py  archetype_descriptor.py  archetype_metadata.py  archetype_parameters.py  archetype_resource_builder.py  cli.py  constants.py  directory_builder.py  exception.py  file_builder.py  json_serializable.py  main.py  serializable.py  standard_archetype.py  template_archetype.py  template_directory_builder.py  template_file_builder.py
pyincept/: __init__.py  archetype.py  archetype_base.py  archetype_descriptor.py  archetype_metadata.py  archetype_resource_builder.py  architype.py  architype_base.py  architype_parameters.py  base_file_renderer.py  constants.py  directory_builder.py  file_builder.py  file_renderer.py  file_renderer_base.py  incept.py  json_serializable.py  main.py  project_builder.py  pyincept.py  serializable.py  standard_archetype.py  standard_architype.py  standard_file_renderer.py  template_archetype.py  template_directory_builder.py  template_file_builder.py  template_renderer.py
pyincept/_resources/templates/: Makefile.jinja  Pipfile.jinja  README.rst.jinja  __init___package.py.jinja  __init___tests.py.jinja  __init___tests_end_to_end.py.jinja  __init___tests_end_to_end_package.py.jinja  __init___tests_integration.py.jinja  __init___tests_integration_package.py.jinja  __init___tests_unit.py.jinja  __init___tests_unit_package.py.jinja  __init__package.py.jinja  entry_point.py.jinja  main.py.jinja  setup.cfg.jinja  setup.py.jinja
pyincept/data/architypes/: main.py.jinja
tests/: __init__.py  archetype_output_test_base.py  archetype_test_base.py  file_matcher.py  pyincept_test_base.py  test_file_matcher.py
tests/end_to_end/: __init__.py
tests/end_to_end/test_inceptiontools/: __init__.py
tests/end_to_end/test_pyincept/: __init__.py
tests/integration/: __init__.py
tests/integration/test_inception_tools/: __init__.py  test_cli.py
tests/integration/test_inceptiontools/: __init__.py  test_cli.py  test_main.py
tests/integration/test_pyincept/: __init__.py  test_main.py  test_pyincept.py
tests/unit/: __init__.py
tests/unit/test_inception_tools/: __init__.py  test_archetype_base.py  test_archetype_descriptor.py  test_archetype_metadata.py  test_archetype_parameters.py  test_cli.py  test_directory_builder.py  test_file_builder.py  test_json_serializable.py  test_serializable.py  test_standard_archetype.py  test_standard_architype.py  test_template_archetype.py  test_template_directory_builder.py  test_template_file_builder.py
tests/unit/test_inception_tools/data/test_standard_archetype/inception-tools-archetype-cli-1.0/: Pipfile  setup.cfg
tests/unit/test_inception_tools/data/test_standard_archetype/inception-tools-archetype-cli-1.0/some_package_name/: cli.py
tests/unit/test_inceptiontools/: __init__.py  test_archetype_base.py  test_archetype_descriptor.py  test_archetype_metadata.py  test_cli.py  test_main.py  (+9 more)
(+171 files in other folders)
