[aliases]
test = pytest

[metadata]
name = pyincept
version = 0.0.2
url = https://github.com/avanherick/pyincept/
author = Andrew van Herick
author_email = avanherick@gmail.com
description = A lightweight package for creating Python project templates.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache Software License
license_file = LICENSE
project_urls =
    Documentation = https://github.com/avanherick/pyincept/
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.5
packages = find:
scripts =
include_package_data = true
install_requires=
    click
    jinja2
tests_require=
    pyhamcrest
    pytest
setup_requires=
    pytest-runner
    wheel

[options.entry_points]
console_scripts =
    pyincept = pyincept.pyincept:main

[options.package_data]
* = *.txt, '*.rst, *.cfg
pyincept = _resources/templates/*.jinja

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = -v
testpaths = tests
