[aliases]
test = pytest

[metadata]
name = inception-tools
version = 0.0.8
url = https://github.com/inception-tools/inception-tools/
author = Andrew van Herick
author_email = avanherick@gmail.com
description = A lightweight package for creating Python project templates.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache Software License 2.0
license_file = LICENSE
project_urls =
    Documentation = https://github.com/inception-tools/inception-tools/
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
packages = find:
scripts =
include_package_data = True
install_requires=
    click
    jinja2
    jsonschema
tests_require=
    pyhamcrest
    pytest
setup_requires=
    pytest-runner
    sphinx
    wheel

[options.entry_points]
console_scripts =
    it = inception_tools.cli:cli

[options.package_data]
* = *.txt, *.rst, *.cfg
inception_tools =
    data/archetypes/**/*
    data/archetypes/**/**/*
    data/archetypes/**/**/**/*
    data/archetypes/**/**/**/**/*

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = -v
testpaths = tests
