[aliases]
test = pytest

[metadata]
name = some_package_name
version = 0.0.0
url = https://github.com//some_package_name/
author = some_author
author_email = some_author_email
description = Insert your project description here.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache Software License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    # Prevents upload to PyPI, because it is not one of the known classifiers.
    # This can and should be removed if you will be distributing you package
    # to PyPI.
    Private :: Do Not Upload

[options]
python_requires = >=3.5
packages = find:
scripts =
include_package_data = True
install_requires=
    click
tests_require=
    pyhamcrest
    pytest
setup_requires=
    pytest-runner
    wheel

[options.entry_points]
console_scripts =
    some_package_name = some_package_name.cli:cli

[options.package_data]
* = *.txt, *.rst, *.cfg

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = -v
testpaths = tests
